--- a/TestV3/Views/Shared/_Layout.cshtml
+++ b/TestV3/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="DynamicTableImport" asp-action="Index">Import</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TableViewer" asp-action="Index">Imported Tables</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TableViewer" asp-action="Index">Tables</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Calculation" asp-action="Index">Calculated Tables</a>
