--- a/TestV3/Views/Calculation/_FmpEvnTable.cshtml
+++ b/TestV3/Views/Calculation/_FmpEvnTable.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TestV3.Models.FmpEvn>
+﻿@using TestV3.Models.PmQL
+@model IEnumerable<FmpEvn>
 
 <table class="table table-striped table-bordered">
     <thead class="table-dark">
