--- a/TestV3/Views/Calculation/_FmpSaiTable.cshtml
+++ b/TestV3/Views/Calculation/_FmpSaiTable.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TestV3.Models.FmpSai>
+﻿@using TestV3.Models.PmQL
+@model IEnumerable<FmpSai>
 
 <table class="table table-striped table-bordered">
     <thead class="table-dark">
