--- a/TestV3/Views/Calculation/_PmEvnTable.cshtml
+++ b/TestV3/Views/Calculation/_PmEvnTable.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TestV3.Models.PmEvn>
+﻿@using TestV3.Models.PmQL
+@model IEnumerable<PmEvn>
 
 <table class="table table-striped table-bordered">
     <thead class="table-dark">
