--- a/TestV3/Views/Calculation/_PmSaiTable.cshtml
+++ b/TestV3/Views/Calculation/_PmSaiTable.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TestV3.Models.PmSai>
+﻿@using TestV3.Models.PmQL
+@model IEnumerable<PmSai>
 
 <table class="table table-striped table-bordered">
     <thead class="table-dark">
