--- a/TestV3/Views/Calculation/Index.cshtml
+++ b/TestV3/Views/Calculation/Index.cshtml
@@ -84,6 +84,11 @@
                 </select>
             </div>
 
+            <div class="mt-4">
+                <button id="exportToExcel" class="btn btn-success">
+                    <i class="bi bi-file-excel">Export to Excel</i>
+                </button>
+
             <div id="tableContainer" class="table-responsive">
                 <!-- Table will be loaded here via AJAX -->
                 <div class="text-center">
@@ -122,6 +127,12 @@
                     }
                 });
             }
+        });
+
+        // Export to Excel
+        $("#exportToExcel").click(function() {
+            var tableName = $("#tableSelector").val();
+            window.location.href = '@Url.Action("ExportToExcel", "Calculation")?tableName=' + tableName;
         });
     </script>
 }
