--- a/TestV3/Views/TableViewer/_TableDataPartial.cshtml
+++ b/TestV3/Views/TableViewer/_TableDataPartial.cshtml
@@ -1,5 +1,6 @@
-﻿@model TestV3.Models.TableViewerModel
+﻿@model TableViewerModel
 @using System.Data
+@using TestV3.Models.Imported
 
 <div class="table-responsive">
     <table class="table table-striped table-bordered">
