--- a/TestV3/Views/TableViewer/Index.cshtml
+++ b/TestV3/Views/TableViewer/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model TestV3.Models.TableViewerModel
+﻿@model TableViewerModel
 @using System.Data
+@using TestV3.Models.Imported
 @{
     ViewData["Title"] = "Table Viewer";
 }
